JavaFX media stream stops playing after reconnecting via Remote Desktop

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • jfx17
    • Affects Version/s: 8, jfx11, jfx16
    • Component/s: javafx
    • windows

        This is a follow-on bug to JDK-8239589.

        To reproduce this:

        1. Run any program that plays media (video and/or audio) on a Windows 10 remote desktop, for example, Ensemble8.
        2. Disconnect from the remote desktop
        3. Reconnect to the remote desktop

        BUG: any media stream that was playing will no longer continue to play after reconnecting.

        Reloading the media stream works fine, as does playing a new media stream.

        This bug happens even if the software pipeline is used, so is not in the graphics rendering code, and not directly related to JDK-8239589.

              Assignee:
              Alexander Matveev
              Reporter:
              Kevin Rushforth
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: