8264737: JavaFX media stream stops playing after reconnecting via Remote Desktop [v2]