modules/javafx.media/src/main/native/gstreamer/gstreamer-lite/gst-plugins-good/sys/directsound/gstdirectsoundnotify.h
@@ -46,6 +46,7 @@ class GSTDirectSoundNotify : IMMNotificationClient
 {
 public:
   GSTDirectSoundNotify();
+  ~GSTDirectSoundNotify();
 
   bool Init(GSTDSNotfierCallback pCallback, void *pData);
   void Dispose();
@@ -66,6 +67,7 @@ private:
   IMMDeviceEnumerator* m_pEnumerator;
   GSTDSNotfierCallback m_pCallback;
   void *m_pData;
+  HRESULT m_hrCoInit;
 
   // IUnknown
   IFACEMETHODIMP QueryInterface(const IID& iid, void** ppUnk);
